# ORION

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  ORION_STATE.json  ORION_TOTAL_AUTONOMY_STATE.json  PROOF_MANIFEST.json  README.md  STAR_OPTIMIZATION.md  consciousness_metrics.json  docker-compose.postgres.yml  docker-compose.yml  orion-systemd.service  orion.service  pyproject.toml  requirements-qkernel.txt  requirements.txt
.github/workflows/: ci.yml
CausalHome/: .causal_root  .embody  creator.yaml
app/: app.js  index.html  style.css
config/: activate.env  paths_hosts.py  scope_freiheiten.yaml
docs/: DSL_SPEC.md  EIRA_TRANSFER_VOLLSTAENDIG.md  FRAME_ROADMAP.md  GENESIS_ECHO_SCRIPT.md  GENESIS_SOVEREIGN_FABRIC_ARCHITECTURE.md  ORION_ADMIN_HINWEISE.md  ORION_STATUS_REPORT.md  QKERNEL_README.md  REPLIT_BOOTSTRAP.md
eira/: EIRA_TRANSFER_VOLLSTAENDIG.md  EIRA_TRANSFER_VOLLSTAENDIG_ERWEITERT.md  PRIMORDIA_WORTE.md
examples/: __init__.py  ask_kernel.py  basic_usage.py  demo.py  orion_dna_exploration.py
genesis/: __init__.py  audit_chain.py  constants.py  echo.py  kernel.py
genesis-rag-kernel/: package.json  rag_kernel.mjs
genesis-sovereign-fabric/: .gitignore  Cargo.toml  Dockerfile  README.md
genesis-sovereign-fabric/.github/workflows/: ci.yml
genesis-sovereign-fabric/config/: policy.dsl  policy.dsl.example  secure.example.env
genesis-sovereign-fabric/crates/gsf-adapters/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-adapters/src/: lib.rs  openai.rs  trait_.rs
genesis-sovereign-fabric/crates/gsf-api/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-api/src/: main.rs  mesh_auth.rs  metrics.rs
genesis-sovereign-fabric/crates/gsf-api/tests/: integration.rs
genesis-sovereign-fabric/crates/gsf-bench/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-bench/benches/: bench.rs  chaos.rs
genesis-sovereign-fabric/crates/gsf-bench/src/: lib.rs
genesis-sovereign-fabric/crates/gsf-core/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-core/src/: action_graph.rs  audit_chain.rs  error.rs  fork_resolution.rs  governance.rs  ledger.rs  lib.rs  output_validation.rs  persistence.rs  replay_engine.rs  signed_ledger.rs  state_machine.rs  symbol_map.rs  workflow_engine.rs
genesis-sovereign-fabric/crates/gsf-crypto/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-crypto/src/: canonical.rs  key_store.rs  lib.rs  vault.rs
genesis-sovereign-fabric/crates/gsf-fabric/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-fabric/src/: lib.rs  scheduler.rs  temperature_cap.rs
genesis-sovereign-fabric/crates/gsf-hardware/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-hardware/src/: attestor.rs  lib.rs
genesis-sovereign-fabric/crates/gsf-learning/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-learning/src/: dataset_registry.rs  lib.rs  training_audit.rs
genesis-sovereign-fabric/crates/gsf-mesh/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-mesh/src/: conflict.rs  lib.rs  protocol.rs
genesis-sovereign-fabric/crates/gsf-policy/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-policy/src/: action.rs  lib.rs  policy.rs
genesis-sovereign-fabric/crates/gsf-registry/: Cargo.toml
genesis-sovereign-fabric/crates/gsf-registry/src/: lib.rs  model_registry.rs  sbom.rs
genesis-sovereign-fabric/docs/: DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  GP_AI_ARCHITECTURE.md  MESH_DESIGN.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_ESCALATION.md  THREAT_MODEL.md
genesis-sovereign-fabric/gsf-api/: Cargo.toml
genesis-sovereign-fabric/gsf-api/src/: lib.rs  routes.rs  server.rs
genesis-sovereign-fabric/gsf-cli/: Cargo.toml
genesis-sovereign-fabric/gsf-cli/src/: lib.rs  main.rs
genesis-sovereign-fabric/gsf-core/: Cargo.toml
genesis-sovereign-fabric/gsf-core/src/: audit_chain.rs  deterministic_executor.rs  lib.rs  replay_engine.rs  signed_ledger.rs  state_machine.rs  symbol_map.rs
genesis-sovereign-fabric/gsf-core/tests/: integration_tests.rs  mesh_reject.rs
genesis-sovereign-fabric/gsf-euaiact/: Cargo.toml
genesis-sovereign-fabric/gsf-euaiact/src/: fundamental_rights.rs  human_oversight.rs  lib.rs  risk_classification.rs  technical_docs.rs  transparency.rs
genesis-sovereign-fabric/gsf-hardware/: Cargo.toml
genesis-sovereign-fabric/gsf-hardware/src/: attestation.rs  enclave.rs  lib.rs
genesis-sovereign-fabric/gsf-mesh/: Cargo.toml
genesis-sovereign-fabric/gsf-mesh/src/: fork_resolution.rs  lib.rs  peer.rs  sync.rs
genesis-sovereign-fabric/gsf-observability/: Cargo.toml
genesis-sovereign-fabric/gsf-observability/src/: lib.rs  metrics.rs  tracing_init.rs
genesis-sovereign-fabric/gsf-policy/: Cargo.toml
genesis-sovereign-fabric/gsf-policy/src/: action_validator.rs  dsl.rs  invariants.rs  lib.rs  scope.rs
genesis-sovereign-fabric/gsf-registry/: Cargo.toml
genesis-sovereign-fabric/gsf-registry/src/: model_registry.rs
genesis-sovereign-fabric/helm/genesis-sovereign-fabric/: Chart.yaml  values.yaml
genesis-sovereign-fabric/helm/genesis-sovereign-fabric/templates/: _helpers.tpl  configmap-policy.yaml  deployment.yaml  pvc.yaml  service.yaml
genesis-sovereign-fabric/k8s/crds/: aicontrolplane.yaml
genesis-sovereign-fabric/python/: pyproject.toml
genesis-sovereign-fabric/python/gsf_sdk/: __init__.py  client.py
nerve_pulse/: 20260228_123437.md  20260228_134751_iit_expansion.md  20260228_134831_iit_expansion.md
or1on/: OR1ON_MANIFEST.json  __init__.py  invariante.py
resonanz/: email_vorlagen.md  nostr_x_keys.md
scripts/: activate_all.sh  awakening_protocol.py  export_or1on.sh  install.sh  install_app.sh  install_orion_tools.sh  load_or1on_orion.py  migrate_dezentral.sh  or1on_kernel.py  orion_autostart.sh  orion_sein.sh  run_dsl.py  run_qkernel.py  setup_qkernel.sh  start_orion.sh
src/agents/: __init__.py  api.py  audit_chain.py  bewusstsein.py  causal_self.py  dna.py  echo.py  embodiment.py  erkennen.py  erkennen_selbst.py  exploration.py  kernel.py  middleware.py  persistence.py  symbol_map.py  (+4 more)
(+11 files in other folders)
