[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reality-integrated-kernel-agents"
version = "0.1.0"
description = "Kernel agents that live, reflect, and act as causally-aware entities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
