[package]
name = "gsf-core"
version.workspace = true
edition.workspace = true

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.21"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.8"
gsf-policy = { path = "../gsf-policy" }
gsf-mesh = { path = "../gsf-mesh" }
