[package]
name = "gsf-mesh"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = "2.1"
tokio = { version = "1.35", features = ["sync", "net", "time"] }
gsf-core = { path = "../gsf-core" }
