[package]
name = "gsf-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gsf-api"
path = "src/main.rs"

[[bin]]
name = "gsf-cli"
path = "src/bin/gsf-cli.rs"

[dependencies]
gsf-core = { path = "../gsf-core" }
gsf-hardware = { path = "../gsf-hardware" }
gsf-policy = { path = "../gsf-policy" }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
