[package]
name = "gsf-bench"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "chaos"
harness = false

[dependencies]
gsf-core = { path = "../gsf-core" }
gsf-policy = { path = "../gsf-policy" }
criterion = "0.5"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
