[package]
name = "gsf-core"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
gsf-crypto = { path = "../gsf-crypto" }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = "1.0"
thiserror = "1.0"
tracing = "0.1"

[features]
default = []
postgres = []
