[package]
name = "gsf-crypto"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ed25519-dalek = "1.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json", "blocking"] }
base64 = { version = "0.21", optional = true }

[features]
default = []
vault = ["dep:reqwest", "dep:base64"]
